--- a/contact-us.html
+++ b/contact-us.html
@@ -50,8 +50,7 @@
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
                   <li><a href="index.html">Главная</a></li>
-                  <li><a href="about-us.html">О компании</a></li>
-                  <li><a href="prices.html">Ассортимент и цены</a></li>
+                  <li><a href="prices.html">Ассортимент</a></li>
                   <li class="active"><a href="contact-us.html">Контакты</a></li>
                 </ul>
             </div>
@@ -140,8 +139,7 @@
                 <div class="col-sm-6">
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
-                      <li><a href="about-us.html">О компании</a></li>
-                      <li><a href="prices.html">Ассортимент и цены</a></li>
+                      <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
                 </div>
