--- a/contact-us.html
+++ b/contact-us.html
@@ -76,7 +76,7 @@
                                     <h5>Михаил Петров</h5>
                                     <p>Телефон +7(4852) 56-75-11 <br>
                                     Skype <a href="skype:some_skype?call">some_skype</a> <br></p>
-                                    <p>Email <a href="mailto:info@domain.com">info@domain.com</a></p>
+                                    <p>Email <a href="mailto:mail@yar-truba.ru">mail@yar-truba.ru</a></p>
                                 </address>
 
                                 <address>
@@ -102,7 +102,7 @@
             </div>
             <div class="row contact-wrap">
                 <div class="status alert alert-success" style="display: none"></div>
-                <form id="main-contact-form" class="contact-form form-horizontal" name="contact-form" method="post" action="https://formspree.io/yartubes@gmail.com">
+                <form id="main-contact-form" class="contact-form form-horizontal" name="contact-form" method="post" action="https://formspree.io/mail@yar-truba.ru">
                     <div class="form-group">
                         <label>Представьтесь, пожалуйста</label>
                         <input type="text" id="name" name="name" class="form-control" required="required">
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2016 <a href="mailto:yartubes@gmail.com" title="Обратная связь">Обратная связь</a>. GPLv3.
+                    &copy; 2016 <a href="mailto:mail@yar-truba.ru" title="Обратная связь">Обратная связь</a>. GPLv3.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
