--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2016 <a href="mailto:yartubes@gmail.com" title="Обратная связь">Обратная связь</a>. GPLv3.
+                    &copy; 2016 <a href="mailto:mail@yar-truba.ru" title="Обратная связь">Обратная связь</a>. GPLv3.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
