Changes main image

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="item active" style="background-image: url(images/tubes.jpg)">
                     <div class="container">
                         <div class="row slide-margin">
-                            <div class="col-sm-6">
+                            <div class="col-xs-12 col-sm-6 col-md-8">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Любые изделия из труб</h1>
                                     <h2 class="animation animated-item-2">Таких изделий вы ещё не видели! Мы делаем совершенно бомбические изделия! Налетай, торопись, покупай наши изделия!</h2>
