Adds description tag

--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="покупка, продажа, демонтаж и транспортировка бу труб">
     <meta name="author" content="">
     <title>Связаться с нами</title>
 
