Add sitemap and robots.txt

--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                       <li><a href="index.html">Главная</a></li>
-                      <li><a href="services.html">Ассортимент</a></li>
+                      <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
                 </div>
@@ -91,7 +91,7 @@
         <h1>404, Нет такой страницы</h1>
         <p>Не пугайтесь, ничего страшного не произошло, просто вы запросили страницу, которой у нас нет.</p>
         <a class="btn btn-primary" href="index.html">Вернуться на главную</a>
-        <a class="btn btn-primary" href="services.html">Посмотреть ассортимент</a>
+        <a class="btn btn-primary" href="prices.html">Посмотреть ассортимент</a>
     </section><!--/#error-->
 
     <footer id="footer" class="midnight-blue">
@@ -103,7 +103,7 @@
                 <div class="col-sm-6">
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
-                      <li><a href="services.html">Ассортимент</a></li>
+                      <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
                 </div>
