--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Любые изделия из труб</h1>
                                     <h2 class="animation animated-item-2">Таких изделий вы ещё не видели! Мы делаем совершенно бомбические изделия! Налетай, торопись, покупай наши изделия!</h2>
-                                    <a class="btn-slide animation animated-item-3" href="services.html">Смотреть ассортимент</a>
+                                    <a class="btn-slide animation animated-item-3" href="prices.html">Смотреть ассортимент</a>
                                 </div>
                             </div>
                         </div>
