--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Покупка, продажа и демонтаж б/у труб">
     <meta name="author" content="">
-    <title>Трубы в Ярославле</title>
+    <title>Труба б/у в Центральном и СЗ регионах</title>
 
 	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
