--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Покупка, продажа и демонтаж б/у труб">
     <meta name="author" content="">
-    <title>404 | Страница не найдена</title>
+    <title>Труба б/у – 404 | Страница не найдена</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -56,7 +56,7 @@
     </div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
-  
+
     <header id="header">
       <div class="top-bar">
           <div class="container">
