--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Покупка, продажа и демонтаж б/у труб">
     <meta name="author" content="">
-    <title>Связаться с нами</title>
+    <title>Труба б/у – Связаться с нами</title>
 
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +60,7 @@
     </div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
-  
+
   <header id="header">
     <div class="top-bar">
         <div class="container">
