--- a/prices.html
+++ b/prices.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Покупка, продажа и демонтаж б/у труб">
     <meta name="author" content="">
-    <title>Ассортимент и цены</title>
+    <title>Труба б/у – Ассортимент</title>
 
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
