--- a/contact-us.html
+++ b/contact-us.html
@@ -106,15 +106,15 @@
                         <ul class="row">
                             <li class="col-sm-6">
                                 <address>
-                                    <h5>Михаил Петров</h5>
-                                    <p>Телефон +7(4852) 56-75-11 <br>
+                                    <h5>Иван Ананьев</h5>
+                                    <p>Телефон +7(4852) 68-20-41 <br>
                                     Skype <a href="skype:some_skype?call">some_skype</a> <br></p>
-                                    <p>Email <a href="mailto:mail@yar-truba.ru">mail@yar-truba.ru</a></p>
+                                    <p>Email <a href="mailto:ivan_ananev@mail.ru">info@domain.com</a></p>
                                 </address>
 
                                 <address>
-                                  <h5>Пётр Михайлов</h5>
-                                  <p>Телефон: +7(4852) 56-75-11 <br>
+                                  <h5>Сергей Любимов</h5>
+                                  <p>Телефон: +7(4852) 68-20-51 <br>
                                   Skype <a href="skype:some_skype?call">some_skype</a> <br></p>
                                   <p>Email <a href="mailto:info@domain.com">info@domain.com</a></p>
                                 </address>
