--- a/contact-us.html
+++ b/contact-us.html
@@ -109,7 +109,7 @@
                                     <h5>Иван Ананьев</h5>
                                     <p>Телефон +7(4852) 68-20-41 <br>
                                     Skype <a href="skype:some_skype?call">some_skype</a> <br></p>
-                                    <p>Email <a href="mailto:ivan_ananev@mail.ru">info@domain.com</a></p>
+                                    <p>Email <a href="mailto:info@domain.com">ivan_ananev@mail.ru</a></p>
                                 </address>
 
                                 <address>
