--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Покупка, продажа и демонтаж б/у труб">
+    <meta name="description" content="Покупка, продажа и демонтаж б/у труб – здесь вы можете узнать, как с нами связаться">
     <meta name="author" content="">
     <title>Труба б/у – Связаться с нами</title>
 
