--- a/contact-us.html
+++ b/contact-us.html
@@ -108,15 +108,12 @@
                                 <address>
                                     <h5>Иван Ананьев</h5>
                                     <p>Телефон +7(4852) 68-20-41 <br>
-                                    Skype <a href="skype:some_skype?call">some_skype</a> <br></p>
-                                    <p>Email <a href="mailto:info@domain.com">ivan_ananev@mail.ru</a></p>
+                                    <p>Email <a href="mailto:ivan_ananev@mail.ru">ivan_ananev@mail.ru</a></p>
                                 </address>
 
                                 <address>
                                   <h5>Сергей Любимов</h5>
                                   <p>Телефон: +7(4852) 68-20-51 <br>
-                                  Skype <a href="skype:some_skype?call">some_skype</a> <br></p>
-                                  <p>Email <a href="mailto:info@domain.com">info@domain.com</a></p>
                                 </address>
                             </li>
 
