Update main page

--- a/404.html
+++ b/404.html
@@ -63,12 +63,12 @@
               <div class="row">
                   <div class="col-sm-6 col-xs-4">
                       <div class="top-number">
-                        <p><i class="fa fa-phone-square"></i>  +7(4852)56-70-90, +7(4852)56-70-90</p>
+                        <p><i class="fa fa-phone-square"></i> +7(4852) 68-20-41, +7(4852) 68-20-51</p>
                       </div>
                   </div>
                   <div class="col-sm-6 col-xs-4">
                       <div class="social top-number">
-                        <p><i class="fa"></i>150006, г. Ярославль, ул. Какая-то, дом 1</p>
+                        <p><i class="fa"></i>г. Ярославль, ул. Магистральная, д. 14</p>
                       </div>
                   </div>
               </div>
