--- a/prices.html
+++ b/prices.html
@@ -65,14 +65,14 @@
       <div class="top-bar">
           <div class="container">
               <div class="row">
-                  <div class="col-sm-6 col-xs-4">
+                  <div class="col-sm-6 col-xs-6">
                       <div class="top-number">
                         <p><i class="fa fa-phone-square"></i> +7(4852) 68-20-51, +7(4852) 68-20-41</p>
                       </div>
                   </div>
-                  <div class="col-sm-6 col-xs-4">
+                  <div class="col-sm-6 col-xs-6">
                       <div class="social top-number">
-                        <p><i class="fa"></i>г. Ярославль, ул. Магистральная, дом 14</p>
+                        <p><i class="fa"></i>г. Ярославль, ул. Магистральная, д. 14</p>
                       </div>
                   </div>
               </div>
