--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div id="main-slider" class="landing">
         <div class="container-fluid">
           <div class="row red-text"><!-- first row -->
-            <div class="col-xs-12 col-sm-6 col-md-6"><!-- first column -->
+            <div class="col-xs-12 col-sm-6 col-md-6 big-text"><!-- first column -->
               <h1>ТРУБЫ</h1>
               <div class="row">
                 <div class="col-xs-5 col-sm-5 col-md-5 phones">
@@ -116,7 +116,7 @@
             </div>
             </div> <!-- first column -->
           <div class="col-xs-12 col-sm-6 col-md-6 black-text"><!-- second column -->
-            <h1>КУПЛЯ</h1>
+            <h2>КУПЛЯ</h2>
             <h2>ПРОДАЖА</h2>
             <h2>ДЕМОНТАЖ</h2>
           </div><!-- second column -->
