--- a/index.html
+++ b/index.html
@@ -100,38 +100,25 @@
 
     </header><!--/header-->
 
-    <div id="main-slider" class="landing">
-        <div class="container-fluid">
-          <div class="row red-text"><!-- first row -->
-            <div class="col-xs-12 col-sm-12 col-md-6 big-text"><!-- first column -->
-              <h1>ТРУБЫ</h1>
-              <div class="row">
-                <div class="col-xs-5 col-sm-5 col-md-5 phones">
-                    <h3>68-20-41</h3>
-                    <h3>68-20-51</h3>
-                </div>
-                <div class="col-xs-7 col-sm-7 col-md-7 big-text">
-                    <h1>Б/У</h3>
-                </div>
-            </div>
-            </div> <!-- first column -->
-          <div class="col-xs-12 col-sm-6 col-md-6 black-text"><!-- second column -->
-            <h2>КУПЛЯ</h2>
-            <h2>ПРОДАЖА</h2>
-            <h2>ДЕМОНТАЖ</h2>
-          </div><!-- second column -->
-        </div><!-- first row -->
-        </div> <!-- first column -->
-          <div class="row red-text"> <!-- footer -->
-            <div class="col-xs-12 col-sm-12 col-md-6 carousel">
-              <a class="btn-slide animation animated-item-3 active" href="prices.html">Смотреть ассортимент</a>
-            </div>
-            <div class="col-xs-12 col-sm-12 col-md-6">
-              <h3>база в г. Ярославле</h3>
-            </div>
-          </div> <!-- first column -->
-        </div> <!-- container -->
-    </div><!--/#main-slider-->
+    <section id="main-slider" class="no-margin">
+        <div class="carousel">
+            <div class="carousel-inner">
+                <div class="item active" style="background-image: url(images/tubes.jpg)">
+                    <div class="container">
+                        <div class="row slide-margin">
+                            <div class="col-sm-6">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Любые изделия из труб</h1>
+                                    <h2 class="animation animated-item-2">Таких изделий вы ещё не видели! Мы делаем совершенно бомбические изделия! Налетай, торопись, покупай наши изделия!</h2>
+                                    <a class="btn-slide animation animated-item-3" href="services.html">Смотреть ассортимент</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--/.item-->
+            </div><!--/.carousel-inner-->
+        </div><!--/.carousel-->
+    </section><!--/#main-slider-->
 
     <section id="feature" >
         <div class="container">
