Add more details to main page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,54 @@
         </div><!--/.carousel-->
     </section><!--/#main-slider-->
 
-    <section id="feature" >
+    <section id="advantages" class="main-page-block" style="padding-top: 70px">
+        <div class="container">
+          <div class="center wow fadeInDown details">
+               <h2>В чем преимущества Б/У трубы?</h2>
+               <h3>Большинство труб выводятся из эксплутации задолго
+                 до исчерпания ресурса использования. Благодаря этому многие
+                 потребители могут существенно сэкономить, отказывшись от
+                 использования новых труб в пользу б/у. Значительная часть б/у
+                 труб ничем не уступает новым, но стоит заметно дешевле.
+                 Конечно, не для всех видов работ подходит б/у труба, но
+                 правильно подобранная замена от хорошего поставщика во многих
+                 случаях способна сильно снизить ваши затраты.</h3>
+           </div>
+        </div>
+    </section>
+
+    <section id="types" class="main-page-block">
+        <div class="container">
+          <div class="center wow fadeInDown details">
+               <h2>Какие бывают виды Б/У трубы?</h2>
+           </div>
+           <div class="row">
+             <div class="features">
+               <div class="col-md-6 col-sm-8 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                 <div class="feature-wrap">
+                   <h2>Лежая труба</h2>
+                   <h3>Как правило, это труба никогда не эксплуатировалась,
+                     а просто хранилась на складе предприятия или в Госрезерве.
+                     Такие трубы ничем не отличаются от новых, кроме значительно
+                     меньшей цены и могут использоваться практически для любых целей.</h3>
+                 </div>
+               </div>
+               <div class="col-md-6 col-sm-8 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                 <div class="feature-wrap">
+                   <h2>Восстановленная труба</h2>
+                   <h3>Труба, выведенная из эксплуатации и прошедшая
+                     специальную обработку (химическую или термическую) для
+                     восстановления своих эксплуатационных качеств.
+                     Хорошие образцы такой трубы мало чем отличаются от
+                     лежалой или новой, но стоят ещё дешевле.</h3>
+                 </div>
+               </div>
+             </div>
+           </div>
+        </div>
+    </section>
+
+    <section id="feature" class="main-page-block">
         <div class="container">
           <div class="center wow fadeInDown">
                <h2>Почему клиенты выбирают нас</h2>
@@ -132,7 +179,9 @@
                         <div class="feature-wrap">
                             <i class="fa fa-shopping-cart"></i>
                             <h2>Широкий выбор</h2>
-                            <h3>Любые изделия в наличии и на заказ. Если нужного изделия не нашлось – мы будем рады выпилить его лобзиком прямо при вас.</h3>
+                            <h3>Любые изделия в наличии и на заказ.
+                              Если нужного изделия не нашлось – мы будем рады
+                              выпилить его лобзиком прямо при вас.</h3>
                         </div>
                     </div><!--/.col-md-4-->
 
@@ -140,7 +189,9 @@
                         <div class="feature-wrap">
                             <i class="fa fa-rub"></i>
                             <h2>Низкие цены</h2>
-                            <h3>Мы дорожим своими клиентами и работаем себе в убыток, лишь бы вы были счастливы! Дешевле нас вам не найти!</h3>
+                            <h3>Мы дорожим своими клиентами и работаем себе в
+                              убыток, лишь бы вы были счастливы!
+                              Дешевле нас вам не найти!</h3>
                         </div>
                     </div><!--/.col-md-4-->
 
@@ -148,7 +199,9 @@
                         <div class="feature-wrap">
                             <i class="fa fa-truck"></i>
                             <h2>Дополнительные услуги</h2>
-                            <h3>Мы не только продадим вам любые изделия, но и привезем куда угодно! А за дополнительную плату даже почешем вам пятки!</h3>
+                            <h3>Мы не только продадим вам любые изделия,
+                              но и привезем куда угодно! А за дополнительную
+                              плату даже почешем вам пятки!</h3>
                         </div>
                     </div><!--/.col-md-4-->
                 </div><!--/.services-->
