--- a/prices.html
+++ b/prices.html
@@ -106,17 +106,19 @@
               <div class="plan price-one">
                 <table class="table">
                   <tr class="heading-one">
-                    <td><h3><span>Наименование</span></h3></td>
-                    <td><h3><span>Диаметр</span></h3></td>
-                    <td><h3><span>Производитель</span></h3></td>
-                    <td><h3><span>Цена</span></h3></td>
+                    <td><h3><span>Диаметр, мм</span></h3></td>
+                    <td><h3><span>Стенка, мм</span></h3></td>
+                    <td><h3><span>Марка стали</span></h3></td>
+                    <td><h3><span>Цена за тонну, руб</span></h3></td>
+                    <td><h3><span>Примечание</span></h3></td>
                     <td><h3><span>Фото</span></h3></td>
                   </tr>
                   <tr>
-                    <td>Какие-то трубы #1</td>
-                    <td>От 10 до 15</td>
-                    <td>Китай</td>
-                    <td>От 1000 до 2000</td>
+                    <td>73</td>
+                    <td>5,5</td>
+                    <td>ст. 10-20</td>
+                    <td>25 000</td>
+                    <td>Некондиция</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
                         <div class="overlay">
@@ -129,10 +131,11 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>Какие-то трубы #2</td>
-                    <td>От 20 до 25</td>
-                    <td>Молдова</td>
-                    <td>От 2000 до 3000</td>
+                    <td>114</td>
+                    <td>4,5</td>
+                    <td>ст. 10-20</td>
+                    <td>28 500</td>
+                    <td>Новая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
                         <div class="overlay">
@@ -145,32 +148,223 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>Какие-то трубы #3</td>
-                    <td>От 30 до 35</td>
-                    <td>Польша</td>
-                    <td>От 3000 до 4000</td>
+                    <td>133</td>
+                    <td>6</td>
+                    <td>ст. 20</td>
+                    <td>25 000</td>
+                    <td>Вода</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
                   </tr>
-                  <!-- Копировать отсуда -->
+                  <!-- Копировать отсюда -->
                   <tr>
-                    <td>Какие-то трубы #4</td>
-                    <td>От 40 до 45</td>
-                    <td>франция</td>
-                    <td>От 4000 до 5000</td>
+                    <td>159</td>
+                    <td>5</td>
+                    <td>ст. 10-20</td>
+                    <td>25 000</td>
+                    <td>Вода</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>219</td>
+                    <td>5</td>
+                    <td>ст. 10-20</td>
+                    <td>25 000</td>
+                    <td>Вода</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
                         <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/e102_021.jpg" rel="prettyPhoto">
-                                  <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
                         </div>
                     </td>
                   </tr>
-                  <!-- Копировать до суда -->
+                  <tr>
+                    <td>219</td>
+                    <td>6; 7; 8</td>
+                    <td>ст. 10-20</td>
+                    <td>28 000</td>
+                    <td>Лежалая</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>273</td>
+                    <td>6</td>
+                    <td>ст. 10-20</td>
+                    <td>28 000</td>
+                    <td>Лежалая</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>325</td>
+                    <td>4,5; 5</td>
+                    <td>ст. 10-20</td>
+                    <td>25 500</td>
+                    <td>Вода</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>325</td>
+                    <td>6; 7; 8; 10</td>
+                    <td>ст. 10-20</td>
+                    <td>23 500</td>
+                    <td>Вода</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>377</td>
+                    <td>8</td>
+                    <td>ст. 10-20</td>
+                    <td>25 000</td>
+                    <td>Лежалая</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>426</td>
+                    <td>7; 8</td>
+                    <td>ст. 10-20</td>
+                    <td>25 000</td>
+                    <td>Лежалая</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>530</td>
+                    <td>9</td>
+                    <td>ст. 10-20</td>
+                    <td>17 000</td>
+                    <td>Нефть</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>630</td>
+                    <td>7</td>
+                    <td>ст. 10-20</td>
+                    <td>25 000</td>
+                    <td>Вода</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>720</td>
+                    <td>8</td>
+                    <td>ст. 10-20, 17Г1С</td>
+                    <td>23 000</td>
+                    <td>Нефть</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>820</td>
+                    <td>8; 9</td>
+                    <td>ст. 10-20б 17Г1С</td>
+                    <td>23 000</td>
+                    <td>Нефть</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>920</td>
+                    <td>8; 10</td>
+                    <td>ст. 10-20б 17Г1С</td>
+                    <td></td>
+                    <td>По заказ</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>1020</td>
+                    <td>10; 12</td>
+                    <td>ст. 10-20б 17Г1С</td>
+                    <td>21 500</td>
+                    <td>Нефть</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>1220</td>
+                    <td>8; 9</td>
+                    <td>ст. 10-20б 17Г1С</td>
+                    <td>21 500</td>
+                    <td>Вода, газ</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <!-- Копировать отсюда -->
+                  <tr>
+                    <td>1420</td>
+                    <td>12; 15,7</td>
+                    <td>ст. 10-20б 17Г1С</td>
+                    <td>25 000</td>
+                    <td>Вода, газ</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <div class="overlay">
+                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        </div>
+                    </td>
+                  </tr>
+                  <!-- Копировать досюда -->
                 </table>
               </div>
             </div>
