Change text aligment

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="container">
           <div class="center wow fadeInDown details">
                <h2>В чем преимущества Б/У трубы?</h2>
-               <h3>Большинство труб выводятся из эксплутации задолго
+               <h3 style="text-align: left">Большинство труб выводятся из эксплутации задолго
                  до исчерпания ресурса использования. Благодаря этому многие
                  потребители могут существенно сэкономить, отказывшись от
                  использования новых труб в пользу б/у. Значительная часть б/у
