--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                         <div class="row slide-margin">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Любые изделия из труб</h1>
-                                    <h2 class="animation animated-item-2">Таких изделий вы ещё не видели! Мы делаем совершенно бомбические изделия! Налетай, торопись, покупай наши изделия!</h2>
-                                    <a class="btn-slide animation animated-item-3" href="services.html">Смотреть ассортимент</a>
+                                    <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
+                                    <h2 class="animation animated-item-2">Наша компания продает и покупает стальные трубы Б/У любых диаметров и категорий. Также мы оказываем полный спектр услуг по транспортировке и демонтажу Б/У труб.</h2>
+                                    <a class="btn-slide animation animated-item-3" href="prices.html">Смотреть ассортимент</a>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +171,6 @@
         <div class="container">
           <div class="center wow fadeInDown">
                <h2>Почему клиенты выбирают нас</h2>
-               <p class="lead">Потому что мы самые лучшие!</p>
            </div>
             <div class="row">
                 <div class="features">
@@ -179,9 +178,11 @@
                         <div class="feature-wrap">
                             <i class="fa fa-shopping-cart"></i>
                             <h2>Широкий выбор</h2>
-                            <h3>Любые изделия в наличии и на заказ.
-                              Если нужного изделия не нашлось – мы будем рады
-                              выпилить его лобзиком прямо при вас.</h3>
+                            <h3>Помимо широкого ассортимента
+                              б/у труб в наличии на нашем складе мы можем найти
+                              для вас трубы с любыми характеристиками под заказ.
+                              Звоните, уточняйте.
+                            </h3>
                         </div>
                     </div><!--/.col-md-4-->
 
@@ -189,9 +190,11 @@
                         <div class="feature-wrap">
                             <i class="fa fa-rub"></i>
                             <h2>Низкие цены</h2>
-                            <h3>Мы дорожим своими клиентами и работаем себе в
-                              убыток, лишь бы вы были счастливы!
-                              Дешевле нас вам не найти!</h3>
+                            <h3>Мы постоянно работаем над тем, чтобы удерживать
+                              цена низкими без ущерба для качества продукции.
+                              Актуальную информацию о ценах вы всегда можете посмотреть
+                              на соответствующем разделе нашего сайта или утонить
+                              по телефону.</h3>
                         </div>
                     </div><!--/.col-md-4-->
 
@@ -199,9 +202,10 @@
                         <div class="feature-wrap">
                             <i class="fa fa-truck"></i>
                             <h2>Дополнительные услуги</h2>
-                            <h3>Мы не только продадим вам любые изделия,
-                              но и привезем куда угодно! А за дополнительную
-                              плату даже почешем вам пятки!</h3>
+                            <h3>Мы только продаем и покупаем б/у трубы, но
+                            и охотно поможем с демонтажом и доставкой.
+                            Для этого у нас есть свой штат техники и
+                            высоквалицифированные специалисты.</h3>
                         </div>
                     </div><!--/.col-md-4-->
                 </div><!--/.services-->
