Improved prices header

--- a/prices.html
+++ b/prices.html
@@ -95,8 +95,8 @@
     <section id="feature" class="transparent-bg">
         <div class="container">
            <div class="center">
-                <h2>Наши трубные изделия</h2>
-                <p class="lead">У нас широчайший выбор труб и изделий из них. <br> Мы работаем как по предоплатной, так и по постоплатной системам.</p>
+                <h2>Ассортимент и цены</h2>
+                <p class="lead">Цены указаны для розничных продаж.<br>Для крупных партий у нас предусмотрена система скидок.<br>Подробности уточняйте по телефону.</p>
                 <!--
                 <p class="lead"><a class="btn-primary" href="assets/prices.xlsx">Скачать прайс-лист</a></p>
               -->
