--- a/contact-us.html
+++ b/contact-us.html
@@ -98,23 +98,22 @@
                 <div class="row">
                     <div class="col-sm-5 text-center">
                         <div class="gmap">
-                            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=TNzErmWRC-h9TIYGewQpapESiGHrr50c&width=320&height=240&lang=ru_RU&sourceType=constructor&scroll=true"></script>
+                            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=7Im5XcZL49iVIA3gjD6GvIh967LAlgQK&amp;width=320&amp;height=240&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                         </div>
                     </div>
 
                     <div class="col-sm-7 map-content">
                         <ul class="row">
                             <li class="col-sm-6">
-                                <address>
-                                    <h5>Иван Ананьев</h5>
-                                    <p>Телефон +7(4852) 68-20-41 <br>
-                                    <p>Email <a href="mailto:ivan_ananev@mail.ru">ivan_ananev@mail.ru</a></p>
-                                </address>
-
-                                <address>
-                                  <h5>Сергей Любимов</h5>
-                                  <p>Телефон: +7(4852) 68-20-51 <br>
-                                </address>
+                              <h3 style="margin-top: 0">Телефоны</h3>
+                              <h5>+7(4852) 68-20-41</h5>
+                              <h5>+7(4852) 68-20-51</h5>
+                              <h3>Адреса</h3>
+                              <h5>г. Ярославль, ул. Магистральная, д. 14</h5>
+                              <h5>г. Ярославль, Тормозное шоссе, д. 119</h5>
+                              <h3>Электронная почта</h3>
+                              <h5><a href="mailto:mail@yar-truba.ru">mail@yar-truba.ru</a></h5>
+                              <h5><a href="mailto:ivan_ananev@mail.ru">ivan_ananev@mail.ru</a></h5>
                             </li>
 
                         </ul>
