Update main page image and text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
-                                    <h2 class="animation animated-item-2">Наша компания продает и покупает стальные трубы Б/У любых диаметров и категорий. Также мы оказываем полный спектр услуг по транспортировке и демонтажу Б/У труб.</h2>
+                                    <h2 class="animation animated-item-2">Наша компания продает, покупает и демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
                                     <a class="btn-slide animation animated-item-3" href="prices.html">Смотреть ассортимент</a>
                                 </div>
                             </div>
