Uploaded photos for prices

--- a/prices.html
+++ b/prices.html
@@ -120,14 +120,7 @@
                     <td>25 000</td>
                     <td>Некондиция</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/e102_021.jpg" rel="prettyPhoto">
-                                  <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
                   </tr>
                   <tr>
@@ -137,14 +130,7 @@
                     <td>28 500</td>
                     <td>Новая</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/e102_021.jpg" rel="prettyPhoto">
-                                  <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
                   </tr>
                   <tr>
@@ -165,7 +151,14 @@
                     <td>25 000</td>
                     <td>Вода</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/159.jpg" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/159.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
                     </td>
                   </tr>
                   <tr>
@@ -175,9 +168,13 @@
                     <td>25 000</td>
                     <td>Вода</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/219.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/219.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -188,9 +185,13 @@
                     <td>28 000</td>
                     <td>Лежалая</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/219.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/219.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -201,9 +202,13 @@
                     <td>28 000</td>
                     <td>Лежалая</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/273.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/273.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -214,9 +219,13 @@
                     <td>25 500</td>
                     <td>Вода</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/326.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -227,9 +236,13 @@
                     <td>23 500</td>
                     <td>Вода</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/326.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -240,10 +253,7 @@
                     <td>25 000</td>
                     <td>Лежалая</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
-                        <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
-                        </div>
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
                   </tr>
                   <tr>
@@ -253,9 +263,13 @@
                     <td>25 000</td>
                     <td>Лежалая</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/426.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/426.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -266,9 +280,13 @@
                     <td>17 000</td>
                     <td>Нефть</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/530.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/530.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -279,9 +297,13 @@
                     <td>25 000</td>
                     <td>Вода</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/630.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/630.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -292,10 +314,7 @@
                     <td>23 000</td>
                     <td>Нефть</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
-                        <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
-                        </div>
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
                   </tr>
                   <tr>
@@ -305,9 +324,13 @@
                     <td>23 000</td>
                     <td>Нефть</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/820.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/820.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -318,10 +341,7 @@
                     <td></td>
                     <td>По заказ</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
-                        <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
-                        </div>
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
                   </tr>
                   <tr>
@@ -331,9 +351,13 @@
                     <td>21 500</td>
                     <td>Нефть</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/1020.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/1020.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -344,9 +368,13 @@
                     <td>21 500</td>
                     <td>Вода, газ</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/1220.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/1220.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
@@ -358,9 +386,13 @@
                     <td>25 000</td>
                     <td>Вода, газ</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/e102_021.jpg" alt="">
+                        <img class="img-responsive" src="images/photos/small/1420.jpg" alt="">
                         <div class="overlay">
-                            <img class="img-responsive" src="images/nopic.jpg" alt="">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/1420.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
                         </div>
                     </td>
                   </tr>
