--- a/contact-us.html
+++ b/contact-us.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-sm-6 col-xs-12 col-md-6">
                     <div class="social top-number">
-                      <p><i class="fa"></i>г. Ярославль, ул. Магистральная, д. 14</p>
+                      <p><i class="fa"></i>г. Ярославль, ул. Гагарина, д. 62</p>
                     </div>
                 </div>
             </div>
@@ -109,10 +109,10 @@
                               <h5>+7(4852) 68-20-41</h5>
                               <h5>+7(4852) 68-20-51</h5>
                               <h3>Адреса</h3>
-                              <h5>г. Ярославль, ул. Магистральная, д. 14</h5>
+                              <h5>г. Ярославль, ул. Гагарина, д. 62</h5>
                               <h5>г. Ярославль, Тормозное шоссе, д. 119</h5>
                               <h3>Электронная почта</h3>
-                              <h5><a href="mailto:mail@yar-truba.ru">mail@yar-truba.ru</a></h5>
+                              <h5><a href="mailto:mail@yar-truba.ru">yartruba-76@yandex.ru</a></h5>
                               <h5><a href="mailto:ivan_ananev@mail.ru">ivan_ananev@mail.ru</a></h5>
                             </li>
 
