--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   </div>
                   <div class="col-sm-6 col-xs-12 col-md-6">
                       <div class="social top-number">
-                        <p><i class="fa"></i>г. Ярославль, ул. Магистральная, д. 14</p>
+                        <p><i class="fa"></i>г. Ярославль, ул. Гагарина, д. 62</p>
                       </div>
                   </div>
               </div>
@@ -136,11 +136,7 @@
         </div>
     </section>
 
-    <section id="types" class="main-page-block">
-        <div class="container">
-          <div class="center wow fadeInDown details">
-               <h2>Какие бывают виды Б/У трубы?</h2>
-           </div>
+
            <div class="row">
              <div class="features">
                <div class="col-md-6 col-sm-8 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
